--- a/solution2 (RestTemplate+Eureka)/config-service/pom.xml
+++ b/solution2 (RestTemplate+Eureka)/config-service/pom.xml
@@ -8,20 +8,16 @@
         <version>1.0.0-SNAPSHOT</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
-    <artifactId>discovery-service</artifactId>
+    <artifactId>config-service</artifactId>
     <version>1.0.0-SNAPSHOT</version>
-    <name>Solution2 (RestTemplate+Eureka) - Discovery Service</name>
+    <name>Solution2 (RestTemplate+Eureka) - Config Service</name>
 
-    <description>Solution2 (RestTemplate+Eureka) - Discovery Service</description>
+    <description>Solution2 (RestTemplate+Eureka) - Config Service</description>
 
     <dependencies>
         <dependency>
             <groupId>org.springframework.cloud</groupId>
-            <artifactId>spring-cloud-starter-netflix-eureka-server</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework.cloud</groupId>
-            <artifactId>spring-cloud-starter-config</artifactId>
+            <artifactId>spring-cloud-config-server</artifactId>
         </dependency>
     </dependencies>
 </project>
