--- a/solution2 (RestTemplate+Eureka)/import-service-s2/src/main/resources/bootstrap.yaml
+++ b/solution2 (RestTemplate+Eureka)/import-service-s2/src/main/resources/bootstrap.yaml
@@ -1,15 +1,8 @@
-server:
-  port: 8081
-
 spring:
   application:
     name: import-service
   main:
     banner-mode: off
-
-app:
-  scheduling:
-    enable: true
-
-
-
+  cloud:
+    config:
+      uri: http://localhost:8888
