--- a/solution2 (RestTemplate+Eureka)/pom.xml
+++ b/solution2 (RestTemplate+Eureka)/pom.xml
@@ -67,6 +67,7 @@
 
     <modules>
         <module>discovery-service</module>
+        <module>config-service</module>
         <module>import-service-s2</module>
         <module>processing-service-s2</module>
     </modules>
