--- a/solution1-v3/config-service/pom.xml
+++ b/solution1-v3/config-service/pom.xml
@@ -4,15 +4,14 @@
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>by.hardsoftskills</groupId>
-        <artifactId>solution2-resttemplate-eureka-parent</artifactId>
+        <artifactId>solution1-v3-parent</artifactId>
         <version>1.0.0-SNAPSHOT</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
     <artifactId>config-service</artifactId>
     <version>1.0.0-SNAPSHOT</version>
-    <name>Solution2 (RestTemplate+Eureka) - Config Service</name>
-
-    <description>Solution2 (RestTemplate+Eureka) - Config Service</description>
+    <name>Solution1_v3 - Config Service</name>
+    <packaging>jar</packaging>
 
     <dependencies>
         <dependency>
@@ -20,4 +19,8 @@
             <artifactId>spring-cloud-config-server</artifactId>
         </dependency>
     </dependencies>
+
+    <build>
+        <defaultGoal>package</defaultGoal>
+    </build>
 </project>
