--- a/solution1-v3/import-service/pom.xml
+++ b/solution1-v3/import-service/pom.xml
@@ -4,15 +4,14 @@
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>by.hardsoftskills</groupId>
-        <artifactId>solution2-resttemplate-eureka-parent</artifactId>
+        <artifactId>solution1-v3-parent</artifactId>
         <version>1.0.0-SNAPSHOT</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
-    <artifactId>processing-service-s2</artifactId>
+    <artifactId>import-service</artifactId>
     <version>1.0.0-SNAPSHOT</version>
-    <name>Solution2 (RestTemplate+Eureka) - Processing Service</name>
-
-    <description>Solution2 (RestTemplate+Eureka) - Processing Service</description>
+    <name>Solution1_v3 - Import Service</name>
+    <packaging>jar</packaging>
 
     <dependencies>
         <dependency>
@@ -24,4 +23,8 @@
             <artifactId>spring-cloud-starter-config</artifactId>
         </dependency>
     </dependencies>
+
+    <build>
+        <defaultGoal>package</defaultGoal>
+    </build>
 </project>
