--- a/solution1-v3/processing-service/pom.xml
+++ b/solution1-v3/processing-service/pom.xml
@@ -4,24 +4,27 @@
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>by.hardsoftskills</groupId>
-        <artifactId>solution2-resttemplate-eureka-parent</artifactId>
+        <artifactId>solution1-v3-parent</artifactId>
         <version>1.0.0-SNAPSHOT</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
-    <artifactId>discovery-service</artifactId>
+    <artifactId>processing-service</artifactId>
     <version>1.0.0-SNAPSHOT</version>
-    <name>Solution2 (RestTemplate+Eureka) - Discovery Service</name>
-
-    <description>Solution2 (RestTemplate+Eureka) - Discovery Service</description>
+    <name>Solution1_v3 - Processing Service</name>
+    <packaging>jar</packaging>
 
     <dependencies>
         <dependency>
             <groupId>org.springframework.cloud</groupId>
-            <artifactId>spring-cloud-starter-netflix-eureka-server</artifactId>
+            <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
         </dependency>
         <dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-config</artifactId>
         </dependency>
     </dependencies>
+
+    <build>
+        <defaultGoal>package</defaultGoal>
+    </build>
 </project>
