--- a/solution2-v1/processing-service/src/main/resources/application.yaml
+++ b/solution2-v1/processing-service/src/main/resources/application.yaml
@@ -1,4 +1,8 @@
 spring:
+  application:
+    name: processing-service
+  main:
+    banner-mode: off
   rabbitmq:
     host: localhost
     port: 5672
