--- a/solution2-v2/docker-compose.yml
+++ b/solution2-v2/docker-compose.yml
@@ -3,5 +3,16 @@ services:
   rabbitmq:
     image: rabbitmq:management
     ports:
-      - "5672:5672"
-      - "15672:15672"
+      - 5672:5672
+      - 15672:15672
+  jaeger-allinone:
+    image: jaegertracing/all-in-one:1.19
+    ports:
+      - 5775:5775/udp
+      - 6831:6831/udp
+      - 6832:6832/udp
+      - 5778:5778
+      - 16686:16686
+      - 14268:14268
+      - 14250:14250
+      - 9411:9411
