--- a/solution2-v1/import-service/src/main/resources/application.yaml
+++ b/solution2-v1/import-service/src/main/resources/application.yaml
@@ -6,6 +6,8 @@ spring:
   rabbitmq:
     host: localhost
     port: 5672
+    publisher-returns: true
+    publisher-confirm-type: simple
 
 app:
   labResultType: 1
